bike-touring-tracker/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: btt
spec:
  selector:
    app: btt
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
