bike-touring-tracker/base/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: btt
spec:
  rules:
  - host: bike-touring-tracker.com
    http:
      paths:
      - path: /
        backend:
          serviceName: btt
          servicePort: 80
